--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: '14'
 
       - name: Install dependencies
-        run: yarn Install
+        run: yarn install
 
       - name: Linting
         run: yarn lint
